Corrige erros apontados pelo avaliador

--- a/index.html
+++ b/index.html
@@ -48,23 +48,23 @@
           <li> React. </li>
         </ul>
       </section>
-      <!---------------------------------------------- Seção-03: Artigos --------------------------------------------------->
-      <aside>
-        <article class="lists">
-          <h3 class="subtitle">Sobre o Meu Aprendizado</h3>
-          <p class="right-side">
-            Na Trybe, a rotina é de aprendizado acelerado e constante. Todos os dias somos desafiados a aprender algo novo e assim, o progresso e a evolução nos trabalhos acontece de uma forma muito natural. Na Trybe não há espaço para arrastar dúvidas e seguir sem aprender o conteúdo.
-          </p>
-        </article>
-      </aside>
-      <!-------------------------------------------------------------------------->
-      <div class="secao">
+      <!------------------------------------------- Seção-03: Artigo e Seção ------------------------------------------------>
+      <aside class="secao">
         <h3 id="metodologia" class="subtitle">Metodologia de Aprendizado</h3>
         <section class="left-side">
           <p>
             Depois de alguns testes, Adotei como metodologia a postura de Estudar os conteúdos já na noite anterior e praticar os exercícios do dia já pela parte da manhã.
           </p>
         </section>
+      </aside>
+      <!-------------------------------------------------->
+      <div id="artigo">
+        <article class="lists">
+          <h3 class="subtitle">Sobre o Meu Aprendizado</h3>
+          <p class="right-side">
+            Na Trybe, a rotina é de aprendizado acelerado e constante. Todos os dias somos desafiados a aprender algo novo e assim, a evolução nos trabalhos acontece de uma forma muito natural. Na Trybe não há espaço para arrastar dúvidas e seguir sem aprender por completo os conteúdos. É um curso muito rápido, prático e empolgante, mas que também exige muito dos seus alunos.
+          </p>
+        </article>
       </div>
       <!----------------------------------------- Seção-04: Tabela Virtudes ------------------------------------------------>
       <div>
