--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <aside class="aside-right lado-direito">
         <a href="https://www.facebook.com/silveira.jean.9" target="_blank"><img src="face.png" width="60px" alt="FACEBOOK"></a>
             <h2>Aprendizado</h2>
-            <p>Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva, a simplicidade e a subversão.</p>
+            <p>Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva.</p>
         </aside>
 
-        <section id="aprendizado">Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva, a simplicidade e a subversão.
+        <section id="aprendizado">Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva.
         </section>
 
     <article id="aprendiz" class="article lado-esquerdo">
