--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </strong></p>
             </article>
             
-            <aside class="lado-direito">Iniciei minha caminhada em novembro de 2020 com a Turma 09, e, em menos de um mês, já adquiri MUITO conhecimento.<br><br>A quantidade de conteúdos é enorme, mas a interação com a comunidade via Slack e Zoom ajuda demais nessa questão! Estamos sempre acompanhados de intrutores dedicados integralmente apara tirar nossas dúvidas e otimizar nosso aprendizado.
+            <aside class="lado-direito">Iniciei minha caminhada em novembro de 2020 com a Turma 09, e, em menos de um mês, já adquiri MUITO conhecimento.<br><br>A interação com a comunidade via Slack e Zoom ajuda demais. Estamos sempre ao lado de intrutores dedicados integralmente para otimizar nosso aprendizado.
             </aside>
         </section>
     </div>
