--- a/index.html
+++ b/index.html
@@ -3,72 +3,67 @@
   <head>
     <meta charset="UTF-8">
     <title> Projeto Trybe</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header id="cabecalho">
       <h1 id="titulo">Meus códigos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
-      <nav >
+      <nav>
         <ul>
-        <li><a href="https://github.com/otacisos" target="_blank"> Github</a></li>
+          <li><a href="https://github.com/otacisos" target="_blank"> Github</a></li>
         </ul>
       </nav>
     </header>
-    <img id="minha_foto" src="miau.jpg">
+    <img id="minha_foto" src="miau.jpg" alt="A foto de um mem" >
     <table id="tabela">
       <tr>
-      <th>Nome:</th>
-      <td>Otaciso</td>
+        <th>Nome:</th>
+        <td>Otaciso</td>
       </tr>
       <tr>
-      <th>Idade:</th>
-      <td>15 a.c</td>
+        <th>Idade:</th>
+        <td>15 a.c</td>
       </tr>
     </table>
     <article>
       <p>
-        Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo.
-        Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de
-        sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura, pois a
-        proporção do sangue não pode ser maior que um para um milhão. Entretanto, não tenho dúvida
-        de que obteremos a reação característica.
+        Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo. Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura,
+        pois a proporção do sangue não pode ser maior que um para um milhão. Entretanto, não tenho dúvida de que obteremos a reação característica.
       </p>
     </article>
     <aside>
       <p>
-        Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo.
-        Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de
-        sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura.
+        Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo. Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura.
       </p>
     </aside>
-    <section>
-      <ol id="licoes_aprendidas">
-      <div class="artigo">
-      <li>Aparou</li>
-      <li>numa</li>
-      <li>pipeta</li>
-      <li>gota</li>
-      <li>sangue</li>
-      <li>saiu</li>
-      <li>Agora</li>
-      <li>adiciono</li>
-      <li>esta</li>
-      <li>pequena</li>
-      </div>
+    <section id="licoes_aprendidas">
+      <ol>
+        <div class="artigo">
+          <li>Aparou    </li>
+          <li>numa      </li>
+          <li>pipeta    </li>
+          <li>gota      </li>
+          <li>sangue    </li>
+          <li>saiu      </li>
+          <li>Agora     </li>
+          <li>adiciono  </li>
+          <li>esta      </li>
+          <li>pequena   </li>
+        </div>
       </ol>
       <ul id="licoes_a_aprender">
-      <div class="passagem">
-      <li>quantidade</li>
-      <li>sangue</li>
-      <li>litro</li>
-      <li>água</li>
-      <li>Perceberá</li>
-      <li>mistura</li>
-      <li>aparência</li>
-      <li>água</li>
-      <li>pura</li>
-      <li>pois</li>
-      </div>
+        <div class="passagem">
+          <li>quantidade</li>
+          <li>sangue</li>
+          <li>litro</li>
+          <li>água</li>
+          <li>Perceberá</li>
+          <li>mistura</li>
+          <li>aparência</li>
+          <li>água</li>
+          <li>pura</li>
+          <li>pois</li>
+        </div>
       </ul>
     </section>
     <footer id="rodape">Rodapé</footer>
