--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Aprendizados em 2 semanas de Trybe</h1>
+        <nav>
+            <ul>
+                <li><a href="#minha_foto">Carol Bitencourt</a></li>
+                <li><a href="#licoes_aprendidas">Lições aprendidas</a></li>
+                <li><a href="#licoes_a_aprender">Lições a aprender</a></li>
+            </ul>
+        </nav>
     </header>
     <img id="minha_foto" src="foto_carol_bitencourt.jpg" alt="Foto da Carol Bitencourt.">
 <ol id="licoes_aprendidas">
@@ -41,9 +48,9 @@
         <p>
             Minhas impressões com apenas 2 semanas de Trybe.<br>
             É difícil resumir isso mas vamos lá:<br>
-            Entrei no curso sabendo da intensidade do aprendizado mas não imaginei que seria capaz de 
+            Entrei no curso sabendo da intensidade do aprendizado mas não imaginei que seria capaz de
             criar uma página como esta em apenas 2 semanas.<br>
-            Quando falo dessa maneira, parece até que eles "correram" pra nos ensinar as coisas mas acreditem, 
+            Quando falo dessa maneira, parece até que eles "correram" pra nos ensinar as coisas mas acreditem,
             em 2 semanas as pessoas estudantes já passaram por várias aulas de soft skills para desolvolver habilidades como empatia, inteligência emocional e etc.
         </p>
     </article>
