--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li> React. </li>
         </ul>
       </section>
-      <!------------------------------------------- Seção-03: Artigo e Seção ------------------------------------------------>
+      <!----------------------------------------------- Seção-03: Artigo ---------------------------------------------------->
       <div id="artigo">
         <article class="lists">
           <h3 class="subtitle">Sobre o Meu Aprendizado</h3>
@@ -57,7 +57,7 @@
           </p>
         </article>
       </div>
-      <!--------------------------------------------------> 
+      <!----------------------------------------------- Seção-04: Artigo ----------------------------------------------------> 
       <aside class="secao">
         <h3 id="metodologia" class="subtitle">Metodologia de Aprendizado</h3>
         <section class="left-side">
@@ -66,7 +66,7 @@
           </p>
         </section>
       </aside>
-      <!----------------------------------------- Seção-04: Tabela Virtudes ------------------------------------------------>
+      <!-------------------------------------------- Seção-05: Tabela Virtudes --------------------------------------------->
       <div>
         <table id="table">
           <tr>
@@ -78,11 +78,11 @@
         </table>
       </div>
     </div>
-    <!--------------------------------------------- Seção-05: Link Externo ------------------------------------------------->
+    <!--------------------------------------------- Seção-06: Link Externo ------------------------------------------------->
     <nav>
       <a href="https://www.betrybe.com/?utm_source=trybe.com.br" target="_blank"> Conheça mais sobre a Trybe!</a>
     </nav>
-    <!---------------------------------------- Seção-06: Informações de Rodapé --------------------------------------------->
+    <!------------------------------------------ Seção-07: Informações de Rodapé ------------------------------------------->
     <footer id="rodape">
       Todos os direitos reservados, Jhonatan Coutinho Rangel
     </footer>
