--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Lessons Learned Trybe :rocket:</title>
+    <title>Lessons Learned Trybe - Palenske</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Acme&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap">
 </head>
 <body>
-    <header id=cabecalho>
-        <h1 id="titulo">Lições aprendidas - <spam class="trybe">Trybe</spam>!</h1>
+    <header id=cabecalho><h1 id="titulo">Lições aprendidas - <spam class="trybe">Trybe</spam>!</h1>
         <nav id="menu">
             <ul>
                 <li><a href="#top">Ínicio</a></li>
@@ -22,8 +21,7 @@
     <main>
         <section>
             <img id="minha_foto" src="images/fotome.jpg" alt="Vinicius Palenske, 27 anos. Estudante da Trybe">
-            <div id="caixa_licoes">
-                <h2>Habilidades</h2>
+            <div id="caixa_licoes"><h2>Habilidades</h2>
                 <ol class="lado-esquerdo" id="licoes_aprendidas">
                     <h3>Lições aprendidas</h3>
                     <li>Aprender a aprender</li>
@@ -52,8 +50,7 @@
                 </ul>
             </div>
         </section>
-        <section id="sobremim">
-            <h2>Sobre mim</h2>
+        <section id="sobremim"><h2>Sobre mim</h2>
             <p><em>– Olá, meu nome é Vinicius Palenske e tenho 27 anos. Me sinto cada vez mais próximo do sucesso na carreira em tecnologia graças a <a href="http://betrybe.com/" target="_blank" <spam class="trybe">Trybe</spam>!</em></a></p>
         </section>
         <article class="artigo" id="texto-principal"><h2>Processo de aprendizagem ativa</h2>
@@ -64,7 +61,7 @@
     <section id="canto">
         <aside class="sessao"><h2>O dia em que eu aprendi a usar o Github</h2>
             <p>Nunca imaginei que um dia eu teria um perfil no GitHub! Mas graças a comunidade da <spam class="trybe">Trybe</spam> eu tive a oportunidade de conhecer o passo a passo de como usar o Git na prática.</p>
-    </aside>
+        </aside>
     <div id="tabela"><h3>Difilcudade das lições</h2>
             <table class="dificuldade_skills">
                 <tr>
