A página deve possuir uma lista de lições aprendidas Fix2More

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo. Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura.
         </p>
       </aside>
-      <section id="licoes_aprendidas">
-        <ol>
+      <section>
+        <ol id="licoes_aprendidas">
           <div class="artigo">
             <li>Aparou    </li>
             <li>numa      </li>
