--- a/index.html
+++ b/index.html
@@ -42,16 +42,15 @@
         </ul>
     </aside>
 
-    <aside class="aside-right lado-direito">
-        <a href="https://www.facebook.com/silveira.jean.9" target="_blank"><img src="face.png" width="60px" alt="FACEBOOK"></a>
+    <section>
+        <aside class="aside-right lado-direito">
+            <a href="https://www.facebook.com/silveira.jean.9" target="_blank"><img src="face.png" width="60px" alt="FACEBOOK"></a>
             <h2>Aprendizado</h2>
             <p>Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva.</p>
         </aside>
+    </section>
 
-        <section id="aprendizado">Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva.
-        </section>
-
-    <article id="aprendiz" class="article lado-esquerdo">
+    <article id="aprendizado" class="article lado-esquerdo">
         Carpe diem é parte da frase latina carpe diem quam minimum credula postero (literalmente: 'aproveita o dia e confia o mínimo possível no amanhã'), extraída de uma das Odes, de Horácio (65 a.C. - 8 a.C.), e tem numerosas traduções possíveis: "colhe o dia" (tradução literal), desfruta o presente,viva.
     </article>
     <nav class="nav">
