--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <p id="text1">Aqui você ficará por dentro das principais habilidades e técnologias que estamos aprendendo na Trybe.</p>
         <article class="artigo1">
-            <h3 id="artigo1">Jornada:</h3>
+            <h3 id="artigo1">Aprendizado:</h3>
             <p>Minha jornada na Trybe começou melhor do que eu esperava, a ansiedade e nervosismo pelo início finalmente valeram a pena.</p>
             <p>A cada reunião inicial do dia, é um aprendizado novo e emoções com toda equipe e colegas, sempre temos alguma dinâmica em grupo para nos aproximar, e é algo que tem me ajudado a me soltar mais.</p>
             <p>É realmente uma experiência única, totalmente diferente de faculdades e cursos convencionais, eles não formam apenas profissionais, foram pessoas melhores.</p>
@@ -46,7 +46,7 @@
         <nav>
             <div class="block">
             <div class="mainBloco1 block">                
-            <h3 id="licoesMenu">Lições Aprendidas "The Road So Far:</h3>
+            <h3 id="licoes_aprendidas">Lições Aprendidas "The Road So Far:</h3>
             <table>
              <ul>                
                 <td>
@@ -65,7 +65,7 @@
             </table>
             </div>
             <div class="mainBloco2 block">
-                <h3 id="licoesMenu">Aprendizados Futuros Desejados:</h3>
+                <h3 id="licoes_a_aprender">Aprendizados Futuros Desejados:</h3>
             <table> 
                    
             <ul>
