--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <p id="text1">Aqui você ficará por dentro das principais habilidades e técnologias que estamos aprendendo na Trybe.</p>
         <article class="artigo1">
-            <h3 id="artigo1">Aprendizado:</h3>
+            <h3 id="artigo1"><p id="aprendizados">Aprendizado:</p></h3>
             <p>Minha jornada na Trybe começou melhor do que eu esperava, a ansiedade e nervosismo pelo início finalmente valeram a pena.</p>
             <p>A cada reunião inicial do dia, é um aprendizado novo e emoções com toda equipe e colegas, sempre temos alguma dinâmica em grupo para nos aproximar, e é algo que tem me ajudado a me soltar mais.</p>
             <p>É realmente uma experiência única, totalmente diferente de faculdades e cursos convencionais, eles não formam apenas profissionais, foram pessoas melhores.</p>
@@ -89,7 +89,7 @@
         <h5>Aproveite para me conhecer melhor visitando meu canal no youtube pelo link abaixo:</h5>
             <a href="https://www.youtube.com/watch?v=Fzfgu7WfExo&list=PLo0-PW-3KLHwOmGiZOZPzW0c3CfJYKkM_&index=1" target="_blank"><p id="linkFont">CanalYoutube</p></a>
     </div>       
-    <footer>
+    <footer id="rodape">
         <div class="footer">            
             <p id="textoFooter">Web Site Desenvolvido por Marcos Mantovani para o primeiro projeto da Trybe.</p>
         </div>
