Adicionando uma Section ao html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header id="cabecalho"><h1 id="titulo">Lições Aprendidas - Trybe!</h1></header>
+    <header id="cabecalho">
+        <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
+    </header>
     <img  id="minha_foto" src="lenilsom.jpg" alt="foto de Lenilsom" width="300px">
     <ol id="licoes_aprendidas" >
         <li>Fundamentos: Unix, Shell e Kernel;</li>
@@ -31,13 +33,14 @@
         <li>Context API</li>
         <li>MongoDB</li>
     </ul>
-    <article> Meu aprendizado: O aprendizado é um processo desafiador. Ele convida os indivíduos a trilharem caminhos ainda inexplorados em suas trajetórias de vida. Amo a sensação de ter aprendido algo novo, isto me faz compreender que sempre existe o que melhorar. Acredito que a medida que aprendemos nos tornamos cidadãos mais conscientes e aptos a exercer os nossos direitos. Tenho visto coisas fascinantes em minha, ainda curta, trajetória como estudante na Trybe, tenho plena confiança no trabalho que tem sido realizado por mim e por cada pessoa envolvida nesta caminhada rumo ao sucesso. </article>
-    <aside> Quando começamos o curso, eu nunca havia trabalhado com linhas de comando e, à medida que começamos ao utilizar na trybe, eu pude perceber como nós conhecemos pouco sobre a operação de sistemas de uma forma mais poderosa.
-    </aside>
+    <section>
+        <article> Meu aprendizado: O aprendizado é um processo desafiador. Ele convida os indivíduos a trilharem caminhos ainda inexplorados em suas trajetórias de vida. Amo a sensação de ter aprendido algo novo, isto me faz compreender que sempre existe o que melhorar. Acredito que a medida que aprendemos nos tornamos cidadãos mais conscientes e aptos a exercer os nossos direitos. Tenho visto coisas fascinantes em minha, ainda curta, trajetória como estudante na Trybe, tenho plena confiança no trabalho que tem sido realizado por mim e por cada pessoa envolvida nesta caminhada rumo ao sucesso.        
+        </article>
+        <aside> Quando começamos o curso, eu nunca havia trabalhado com linhas de comando e, à medida que começamos ao utilizar na trybe, eu pude perceber como nós conhecemos pouco sobre a operação de sistemas de uma forma mais poderosa.
+        </aside>
+    </section>
     <footer id="rodape" >
         <a href="https://go.betrybe.com/be-a-tryber?utm_medium=cpc&utm_source=google&utm_campaign=conversion_nacional_programacao&utm_content=anuncio01&gclid=Cj0KCQiAzZL-BRDnARIsAPCJs73CnIeKsua9AUic9IH4V1J8i0IIcSf-CO2K7zJooaB2nemCRFA1SscaAkbYEALw_wcB" target="_blank"> Inscreva-se naTrybe!!!
-
         </a>
-
     </footer>
 </body>
