--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
       </nav>
     <main> 
         <section>
-          <article>
+          <article class="lado-esquerdo">
         <p>Minha caminhada na Trybe começou a pouco tempo, porem nesse pouco tempo muita coisa ja mudou, antes eu me lmebro que entrava 
-        em git hub para baixar mod de jogos e outros tipo de coisas mais independentes, hoje em dia sou eu quem esta subindo coisas para o git hub 
-        isso me deixa muio feliz pois em apenas 2 semanas ja consigo subir e manipular minha propria pagina web, tem sido superior as
-        minhas espectativas
+        em git hub para baixar mod <p>de jogos e outros tipo de coisas mais independentes, hoje em dia sou eu quem esta subindo coisas para o git hub 
+        isso me deixa muio feliz pois em apenas 2 semanas</p><p> ja consigo subir e manipular minha propria pagina web, tem sido superior as
+        minhas espectativas</p>
         </p>
     </article>
     <section>
-        <aside> <p>um que gostaria de destacar do meu aprendizado desde que comecei seria a cordialidade e presença</p> ativa dos professores e membros da equipe em sanar duvidas isso tem ajudado bastante
+        <aside class="lado-direito"> <p>um que gostaria de destacar do meu aprendizado desde que comecei seria a cordialidade e presença</p> ativa dos professores e membros da equipe em sanar duvidas isso tem ajudado bastante
         </aside>
         </section>     
          <section>
