--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <section>
+    
     <header id="cabecalho">
         <div id="cabecalho2">
         <h1 id="titulo">Lições aprendidas - Trybe</h1> <!-- fixar o cabecalho-->   
@@ -17,7 +17,7 @@
         <h3 id="nome">Marcos Mantovani</h3>
     </div>
     </header>
-    </section>
+   
     <nav>
         <div class="list1">
             <h4 id="navegacao1">Navegação:</h4>
@@ -26,9 +26,7 @@
                 <a href="#linkFont"><li>Pessoal</li></a>
             </ul>
         </div>
-    </nav>
-    <section>
-    <main>
+    </nav>       
         <p id="text1">Aqui você ficará por dentro das principais habilidades e técnologias que estamos aprendendo na Trybe.</p>
         <article class="artigo1">
             <h3 id="artigo1"><p id="aprendizados">Aprendizado:</p></h3>
@@ -36,13 +34,13 @@
             <p>A cada reunião inicial do dia, é um aprendizado novo e emoções com toda equipe e colegas, sempre temos alguma dinâmica em grupo para nos aproximar, e é algo que tem me ajudado a me soltar mais.</p>
             <p>É realmente uma experiência única, totalmente diferente de faculdades e cursos convencionais, eles não formam apenas profissionais, foram pessoas melhores.</p>
         </article>
-        <aside>
-            <article class="artigo2">
+        <aside class="artigo2">            
                 <h4>Curiosidade:</h4>
                 <p>Na rotina de aprender a programar o esforço é mental enorme, passa-se o dia na frente do computador tentando explicar o que você quer fazer para a máquina.</p>
-                <p>Uma noite me peguei sonhando "literalmente" em estar conversando com o computador, e o mais bizarro é que ele me respondia, rs.</p>
-            </article>            
+                <p>Uma noite me peguei sonhando "literalmente" em estar conversando com o computador, e o mais bizarro é que ele me respondia, rs.</p>                       
         </aside>
+        <section> 
+        <main>
         <nav>
             <div class="block">
             <div class="mainBloco1 block">                
