--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <head>
-    <Meta charset="pt-br">
+    <html>lang ="pt-br" </html>
+    <meta charset="utf-8">
     <title>TRYBE-Desafio: Lessons Learned</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
+        <table>
+            <tr>
+                <th>home</th>
+                <th>user</th>
+            </tr>
+        </table>
     </header>
-    <img  id="minha_foto" src="lenilsom.jpg" alt="foto de Lenilsom" width="300px">
+    <img id="minha_foto" src="lenilsom.jpg" alt="foto de Lenilsom" width="300px">
     <ol id="licoes_aprendidas" >
         <li>Fundamentos: Unix, Shell e Kernel;</li>
         <li>Terminal: Trabalhando com diretórios e arquivos;</li>
