--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições que aprendi </h1>
-		<nav class="Menu">
-			<u>
-				<li><a href=""> Contato</a></li>
+		<nav is="Menu">
+			<ul>
+				<li><a href="#rodape"> Contato</a></li>
 				<li><a href="https://www.betrybe.com/" target="_blank"> Sobre a Trybe</a></li>
-			</u>
+			</ul>
 		</nav>
 	</header>
+	<main>
 	<img src="./images/pedro.jpg" alt="Foto do Pedro durante a noite" id="minha_foto">
-	<section id="lists">
+	<section class="lists">
 		<ol id="licoes_aprendidas">
 			<li>Git</li>
 			<li>GitHub</li>
@@ -46,10 +47,12 @@
         <h2>Meu Aprendizado</h2>
         <p>Quando eu inícei os estudos na trybe, conhecia muito pouco sobre o mundo de desenvolvimento web, na primeira semana eu comecei a ter aulas sobre terminal e git, mesmo já sabendo um pouco dessas ferramentas, a trybe me deu os mecanismos para consolidar ainda mais o meu conhecimento. Logo após comecei a ter aulas sobre internet, <i>HTML</i>, <i>CSS</i> e <i>HTML Semântico</i>. Desde então sinto muita segurança em todo o conteúdo que ja vi até aqui, consigo compreender uma pagina HTML, e fazer paginas semanticamente corretas, além de aplicar um bom CSS nelas.</p>
 	</article>
-	<aside>
+	<aside id="aside">
 		<h2>Relatos</h2>
-		Eu sempre me considerei uma pessoa comunicativa, e um dos melhor pontos na <i>trybe</i> é que eles não somente trabalham rigorosamente a parte técnica, como também a parte de soft skills, desde então sinto que estou me preparando cada vez mais para entrar no mercado de trabalho.</aside>
+		<p> Sempre me considerei uma pessoa comunicativa, e um dos melhor pontos na <i>trybe</i> é que eles não somente trabalham rigorosamente a parte técnica, como também a parte de soft skills, desde então sinto que estou me preparando cada vez mais para entrar no mercado de trabalho.</p> </aside>
     <footer id="rodape">
 		<a href="https://github.com/pedrohrbispo" target="blank">GitHub</a>
-    </footer>
+		Feito por Pedro Henrique
+	</footer>
+</main>
 </body>
