--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </ul>
             </div>
             <article class="artigo">
-                <h2 class="troca-fonte">Sobre o aprendizado na Trybe</h2>
+                <h2>Sobre o aprendizado na Trybe</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
             </article>
