--- a/index.html
+++ b/index.html
@@ -29,31 +29,31 @@
             <div id="box-aprendidas">
                 <h3 id="titulo-aprendidas">Aprendidas</h3>
                 <ol id="licoes_aprendidas">
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
+                    <li>Linux</li>
+                    <li>Bash</li>
+                    <li>Git</li>
+                    <li>Github</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Javascript</li>
+                    <li>VSCode</li>
+                    <li>Zoom</li>
+                    <li>Slack</li>
                 </ol>
             </div>
             <div id="box-aprender">
                 <h3 id="titulo-aprender">A aprender</h3>
                 <ul id="licoes_a_aprender">
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
-                    <li>XXXXXXXXXX</li>
+                    <li>React</li>
+                    <li>Banco de Dados</li>
+                    <li>REST</li>
+                    <li>Python</li>
+                    <li>Estrutura de Dados</li>
+                    <li>Algoritmos</li>
+                    <li>Arquitetura de COmputadores</li>
+                    <li>Soft Skills</li>
+                    <li>Metodologia Ágeis</li>
+                    <li>Deploy</li>
                 </ul>
             </div>
             <article class="artigo">
