Final Fix, Rumo ao 100%

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
            <table> 
                <tr>         
-            <ul id="licoes_aprendidas">
+            <ol id="licoes_aprendidas">
                 <h2>Lições aprendidas</h2>
                 <li>Nam quis nulla. Integer malesu</li>
                 <li>Nam quis nulla. Integer malesu</li>
@@ -32,7 +32,7 @@
                 <li>Nam quis nulla. Integer malesu</li>
                 <li>Nam quis nulla. Integer malesu</li>
                 <li>Nam quis nulla. Integer malesu</li>
-            </ul>
+            </ol>
         </tr>
         </table> 
         </nav>           
