--- a/index.html
+++ b/index.html
@@ -56,6 +56,47 @@
                     <li>Deploy</li>
                 </ul>
             </div>
+            <div class="tabela">
+                <table>
+                    <h3 id="titulo-tabela">Comandos</h3>
+                        <tr id="tabela-bold">
+                            <td>Linux</td>
+                            <td>HTML</td>
+                            <td>CSS</td>
+                            <td>JS</td>
+                        </tr>
+                        <tr>
+                            <td>cp</td>
+                            <td>img</td>
+                            <td>color</td>
+                            <td>for</td>
+                        </tr>
+                        <tr>
+                            <td>mv</td>
+                            <td>div</td>
+                            <td>margin-top</td>
+                            <td>let</td>
+                        </tr>
+                        <tr>
+                            <td>sudo</td>
+                            <td>span</td>
+                            <td>z-index</td>
+                            <td>if</td>
+                        </tr>
+                        <tr>
+                            <td>rm</td>
+                            <td>h1</td>
+                            <td>border</td>
+                            <td>return</td>
+                        </tr>
+                        <tr>
+                            <td>clear</td>
+                            <td>class</td>
+                            <td>position</td>
+                            <td>switch</td>
+                        </tr>
+                </table>
+            </div>
             <article class="artigo">
                 <h2>Sobre o aprendizado na Trybe</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
