Finalmente projeto finalizado, troca de textos testes para os oficiais.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>    
     <header id="cabecalho">
-        <h1 id="titulo">Testando</h1>
+        <h1 id="titulo">Lições aprendidas - Trybe</h1>
     </header>     
     <img id="minha_foto" src="Profile.png" alt="Foto de perfil do aluno" width="10%"> 
    <section>
@@ -22,16 +22,16 @@
                <tr>         
             <ol id="licoes_aprendidas">
                 <h2>Lições aprendidas</h2>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
+                <li>Inteligência Emocional</li>
+                    <li>Soft Skills "Still in development"</li>
+                    <li>Humildade</li>
+                    <li>Trabalho em equipe</li>
+                    <li>Estratégia de estudo</li>
+                    <li>Organização do tempo"Still in development"</li>
+                    <li>Html e sua Semântica</li>
+                    <li>Css</li>               
+                    <li>JavaScript</li>
+                    <li>Lógica de Programação</li>
             </ol>
         </tr>
         </table> 
@@ -41,16 +41,16 @@
                 <tr>
             <ul id="licoes_a_aprender">
                 <h3>lições a aprender</h3>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
-                <li>Nam quis nulla. Integer malesu</li>
+                <li>Melhorar diariamente o trabalho em equipe para uma qualidade maior de produção"</li>
+                <li>Masterizar as tecnologias e linguagens propostas pelo curso</li>   
+                <li>Continuar a amadurecer as Soft Skills ao longo do curso</li>                            
+                <li>Inovar nas estratégias de ataques a problemas</li>                
+                <li>Aprender a organizar o tempo com maestria</li>
+                <li>Ser uma pessoa e profissional melhor a cada dia</li>  
+                <li>Conseguir elucidar e consolidar o aprendizado de forma prática</li>
+                <li>ser mais ágil com a lógica</li> 
+                <li>entender o backEnd de forma simples</li> 
+                <li>juntar todos esses desejos e transformar em objetivo</li> 
             </ul>
         </tr>
         </table> 
@@ -58,22 +58,28 @@
     </div> 
 </main>
 </section> 
-    <article id="artigo1">        
-        <h3>Aprendizado</h3>
-        <div class="lado-esquerdo">
-      <p>Nam quis nulla. Integer malesuada. In in enim a arcu imperdiet malesuada. Sed vel lectus. Donec odio urna, tempus molestie, porttitor ut, iaculis quis, sem. Phasellus rhoncus. Aenean id metus id velit ullamcorper pulvinar. Vestibulum fermentum tortor id mi. Pellentesque ipsum. Nulla non arcu lacinia neque faucibus fringilla. Nulla non lectus sed ni</p>
+    <article id="artigo1">  
+        <div class="lado-esquerdo">      
+        <h3>Aprendizado</h3>        
+        <p>Minha jornada na Trybe começou melhor do que eu esperava, a ansiedade e nervosismo pelo início finalmente valeram a pena.</p>
+        <p>A cada reunião inicial do dia, é um aprendizado novo e emoções com toda equipe e colegas, sempre temos alguma dinâmica em grupo para nos aproximar, e é algo que tem me ajudado a me soltar mais.</p>
+        <p>É realmente uma experiência única, totalmente diferente de faculdades e cursos convencionais, eles não formam apenas profissionais, foram pessoas melhores.</p>
         </div>
     </article>
     <section>
-    <aside id="artigo2">        
-        <h3><span id="textoPassagem">Passagem</span></h3>
         <div class="lado-direito">
-        <p>Nam quis nulla. Integer malesuada. In in enim a arcu imperdiet malesuada. Sed vel lectus. Donec odio urna, tempus molestie, porttitor ut, iaculis quis</p>
+    <aside id="artigo2">        
+        <h3>Curiosidade</h3>         
+        <p>Na rotina de aprender a programar o esforço mental é enorme, passa-se o dia na frente do computador tentando explicar o que você quer fazer para a máquina.</p>
+                <p>Uma noite me peguei sonhando "literalmente" em estar conversando com o computador, e o mais bizarro é que ele me respondia, rs.</p>
     </div>
     </aside>
 </section>
     <a id="link" href="https://www.youtube.com/watch?v=nG-miFeg2JI" target="_blank"><p id="corLink">Link</p></a>
+    <section>
     <footer id="rodape">
+        <h4>Web Site Desenvolvido por Marcos Mantovani para o primeiro projeto da Trybe.</h4>
     </footer>  
+</section>
 </body>
 </html>
