Finalmente projeto finalizado, troca de textos testes para os oficiais3 - deu zica..

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </nav> 
     </div> 
 </main>
-</section> 
+ 
     <article id="artigo1">  
         <div class="lado-esquerdo">      
         <h3>Aprendizado</h3>        
@@ -66,13 +66,12 @@
         <p>É realmente uma experiência única, totalmente diferente de faculdades e cursos convencionais, eles não formam apenas profissionais, foram pessoas melhores.</p>
         </div>
     </article>
-    <section>
-        
+    <section>        
     <aside id="artigo2">  
         <div class="lado-direito">      
         <h3>Curiosidade</h3>         
         <p>Na rotina de aprender a programar o esforço mental é enorme, passa-se o dia na frente do computador tentando explicar o que você quer fazer para a máquina.</p>
-                <p>Uma noite me peguei sonhando "literalmente" em estar conversando com o computador, e o mais bizarro é que ele me respondia, rs.</p>
+                <p>Uma noite me peguei sonhando literalmente em estar conversando com o computador, e o mais bizarro é que ele me respondia.</p>
     </div>
     </aside>
 </section>
