--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <h1>Lições Aprendidas - Trybe!</h1>
     </header>
     
-    
-</body>
+    <footer>
+        <p>Todos os direitos reservados, José Luiz Fagundes - Trybe</p>>
+    </footer>>
+</body> 
 </html>
