Fix again, deu zica2..

--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
         </table> 
         </nav> 
     </div> 
-</main>
- 
-    <article id="artigo1">  
+</main> 
+    <article id="lado-esquerdo">  
         <div class="lado-esquerdo">      
         <h3>Aprendizado</h3>        
         <p>Minha jornada na Trybe começou melhor do que eu esperava, a ansiedade e nervosismo pelo início finalmente valeram a pena.</p>
@@ -67,12 +66,12 @@
         </div>
     </article>
     <section>        
-    <aside id="artigo2">  
-        <div class="lado-direito">      
-        <h3>Curiosidade</h3>         
+    <aside id="lado-direito">  
+              
+        <h4>Curiosidade</h4>         
         <p>Na rotina de aprender a programar o esforço mental é enorme, passa-se o dia na frente do computador tentando explicar o que você quer fazer para a máquina.</p>
                 <p>Uma noite me peguei sonhando literalmente em estar conversando com o computador, e o mais bizarro é que ele me respondia.</p>
-    </div>
+    
     </aside>
 </section>
     <a id="link" href="https://www.youtube.com/watch?v=nG-miFeg2JI" target="_blank"><p id="corLink">Link</p></a>
